# mumble-plugin-template

./: .clang-format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  README.md  plugin.c
.github/workflows/: cmake-multi-platform.yml
include/: MumbleAPI_v_1_0_x.h
